--- a/action.yaml
+++ b/action.yaml
@@ -26,6 +26,10 @@ inputs:
     description: 'Project version number to report to Dependency Track. Falls back to the git ref when not specified.'
     required: false
     default: ''
+  working-directory:
+    description: 'The working directory to use for resolving paths for lockfiles.'
+    required: false
+    default: ''
 
 outputs:
   riskscore:
@@ -38,5 +42,6 @@ runs:
     - ${{ inputs.url }}
     - ${{ inputs.key }}
     - ${{ inputs.language }}
+    - ${{ inputs.working-directory }}
     - ${{ inputs.project-name }}
     - ${{ inputs.project-version }}
